--- a/app.yml
+++ b/app.yml
@@ -2,13 +2,13 @@
 # SLIC Starter-based application deployment to work
 sourceRepo:
   # This should be changed to match your own repo and branch
-  owner: fourTheorem
+  owner: Sed21
   name: slic-starter
   branch: main
 
 domainConfig:
   # Set 'nsDomain' to an empty string ('') if you are not using custom domains. Do not remove it.
-  nsDomain: sliclists.com
+  nsDomain: ''
 
   # Set 'siteBucketPrefix' if you are not using custom domains
   # It will be used, along with the stage value as a bucket name
